--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -377,6 +377,14 @@ input {
     padding-left: 20px;
 }
 
+.pl30 {
+    padding-left: 30px;
+}
+
+.pl24 {
+    padding-left: 24px;
+}
+
 
 /* padding-right */
 
@@ -560,6 +568,10 @@ input {
     margin-left: 20px;
 }
 
+.ml30 {
+    margin-left: 30px;
+}
+
 .ml24 {
     margin-left: 20px;
 }
@@ -711,6 +723,10 @@ input {
 
 .mb88 {
     margin-bottom: 88px;
+}
+
+.mb110 {
+    margin-bottom: 110px;
 }
 
 .add_more {
