--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -146,3 +146,9 @@ $deepBlue:#08BAC6;
 @mixin commonBorder( $borerSeat:bottom, $color:$borderColor, $px:1px) {
     border-#{$borerSeat}: $px solid $color;
 }
+
+  .no-platform {
+    @include textLineHeight(80px);
+    text-align: center;
+    @extend %normalTitle;
+  }
