--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -148,10 +148,17 @@ $depthTextColor: #3f3f3f;
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -ms-flex-direction: column;
+  -o-box-orient: vertical;
+  box-orient: vertical;
   @if $clamp==1 {
     white-space: nowrap; //不换行
   } @else {
     display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -o-box;
     display: box;
     line-clamp: $clamp;
     -webkit-line-clamp: $clamp; //块元素显示的文本行数
