完成云订单的部分样式

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -44,7 +44,10 @@ $depthTextColor: #3f3f3f;
   align-items: center;
   justify-content: center;
 }
-
+%flexM {
+  display: flex;
+  justify-content: center;
+}
 %lineHr {
   width: 100%;
   margin: 0;
