完成连锁诊所的页面

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -176,3 +176,11 @@ $depthTextColor: #3f3f3f;
   text-align: center;
   @extend %normalTitle;
 }
+.mt-88px {
+  margin-top: 88px;
+  content: '';
+}
+.mt-184px {
+  margin-top: 184px;
+  content: '';
+}
