添加Loading显示+完成3.2.0移动端的全部需求界面

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -15,7 +15,7 @@ $backColor: #333333;
 $deepBlue: #08bac6;
 $lineColor: #d9d9d9;
 $depthTextColor: #3f3f3f;
-
+$lightColor: #ebf8f9;
 /* 继承公共类*/
 
 %displayFlex {
