修改诊所端文章问题

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -121,8 +121,9 @@ $lightColor: #ebf8f9;
 
 //第三种按钮 消息的按钮
 @mixin newsButton($height, $width, $font-size: 28px) {
-  width: $width;
-  height: $height;
+  // width: $width;
+  // height: $height;
+  padding: 4px 8px;
   line-height: $height;
   text-align: center;
   font-size: $font-size;
@@ -130,6 +131,13 @@ $lightColor: #ebf8f9;
   font-weight: 500;
   border-radius: 8px;
   border: 2px solid rgba(8, 186, 198, 1);
+}
+
+@mixin blackWBtn($font-size: 28px) {
+  color: $simpleGray;
+  padding: 10px 26px;
+  border-radius: 8px;
+  background: #f5f5f5;
 }
 
 //文本省略。。。
@@ -184,3 +192,4 @@ $lightColor: #ebf8f9;
   margin-top: 184px;
   content: '';
 }
+
