--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -37,6 +37,10 @@ $lightColor: #ebf8f9;
   display: flex;
   align-items: center;
 }
+%lRFlex {
+  display: flex;
+  justify-content: space-between;
+}
 
 //flex为垂直方向 样式垂直居中
 %columnMC {
@@ -72,6 +76,11 @@ $lightColor: #ebf8f9;
 %mediumIcon {
   height: 112px;
   width: 112px;
+}
+
+%listIcon {
+  width: 68px;
+  height: 72px;
 }
 
 /* 混合宏 */
@@ -149,7 +158,12 @@ $lightColor: #ebf8f9;
   $textColor: $simpleGray
 ) {
   width: $width;
-  height: $height;
+  @if $height!= '' {
+    height: $height;
+  } @else {
+    height: auto;
+  }
+
   color: $textColor;
   font-size: $font-size;
   //$clamp 默认为1 超过单行就换行 2的话 第二行换行
@@ -179,10 +193,28 @@ $lightColor: #ebf8f9;
   height: $val !important;
 }
 
+/* 函数编程  */
+@function vm($size) {
+  @return ($size/1920) * 100vw;
+}
+
 .no-platform {
   @include textLineHeight(80px);
   text-align: center;
   @extend %normalTitle;
+}
+.price {
+  color: $redColor;
+  font-weight: 600;
+}
+.f15 {
+  font-size: 30px;
+}
+.mt-10px {
+  margin-top: 10px;
+}
+.mt-20px {
+  margin-top: 20px;
 }
 .mt-88px {
   margin-top: 88px;
@@ -192,4 +224,17 @@ $lightColor: #ebf8f9;
   margin-top: 184px;
   content: '';
 }
-
+.mr-10px {
+  margin-right: 10px;
+}
+.ml-24px {
+  margin-left: 24px;
+}
+.normal-title {
+  font-size: 32px;
+  font-weight: bold;
+}
+.left-gray-key {
+  font-size: 28px;
+  color: $simpleGray;
+}
